--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <h2>Answer: <span id="answer"></span> </h2>
       </div>
     </div>
-    <script src="JS/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
