--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <title>Palindrom</title>
     <meta charset="UTF-8">
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div class="pal">
-      <h1>Check for a palindrome.</h1>
+      <h1>Проверка на палиндром.</h1>
       <form class="add-form" method="post" onsubmit="return false">
-        <input class="add-form-input" type="text"  aria-label="task description" placeholder="For example, Madam, I’m Adam" required>
-        <button class="add-form-button" type="submit">Verify</button>
+        <input class="add-form-input" type="text"  aria-label="task description" placeholder="Например: А роза упала на лапу Азора." required>
+        <button class="add-form-button" type="submit">Проверить</button>
       </form>
       <div>
-        <h2>Answer: <span id="answer"></span> </h2>
+        <h2>Ответ: <span id="answer"></span> </h2>
       </div>
     </div>
     <script src="js/index.js"></script>
