--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     
   </head>
   <body>
+    <nav class="top-menu">
+        <ul class="menu-main">
+          <li class="left-item"><a href="https://natashamalakhova.github.io/DNAtoRNA/">Конвертор ДНК в РНК</a></li>
+          <li class="left-item"><a href="https://natashamalakhova.github.io/Palindrom/">Проверка на палиндром</a></li>
+          <li class="left-item"><a href="">Подстрока</a></li>
+      </ul>
+      </nav>
     <div class="pal">
       <h1>Проверка на палиндром.</h1>
       <form class="add-form" method="post" onsubmit="return false">
